--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "sound_machine",
-  "version": "0.1.0",
-  "main": "./main.js",
-  "scripts": {
-    "start": "electron ."
-  },
-  "devDependencies": {
-    "electron-prebuilt": "^1.4.13"
-  }
+    "name": "Write",
+    "version": "0.1.0",
+    "main": "./main.js",
+    "scripts": {
+        "start": "electron ."
+    },
+    "devDependencies": {
+        "electron-prebuilt": "^1.4.13"
+    }
 }
